<?xml version="1.0" encoding="utf-8"?>
<resources>
    
	<!-- default -->
    <string name="app_name">골라쥬</string>
    <string name="action_settings">Settings</string>

    
    <!-- text -->
    <string name="text_join">회원가입</string>
    <string name="text_guide">* 오아시스 회원일 경우 기존 ID/PW로 \n 로그인이 가능합니다.</string>
    <string name="text_id">아이디</string>
    <string name="text_pw">비밀번호</string>
    <string name="text_pw_chk">비밀번호 확인</string>
    <string name="text_email">이메일</string>
    <string name="text_isGetMail">메일 수신</string>
    <string name="text_user_agreements">이용약관</string>
    <string name="text_agreements">약관에 동의</string>
    <string name="text_login">로그인</string>
    <string name="text_autoLogin">로그인 상태 유지</string>
    <string name="text_pre">이전</string>
    <string name="text_write">글쓰기</string>
    <string name="text_menu">메뉴</string>
    <string name="text_splash">스플래쉬</string>
    <string name="text_helpWrite">결정 도움 받기</string>
    <string name="text_doHelp">결정 도와 주기</string>
    <string name="text_addInfoGuide">골라쥬에 가입해 주셔서 감사합니다. 원활한 서비스 이용을 위해 회원님의 성별 및 연령 정보를 입력해 주시면 감사하겠습니다.</string>
    <string name="text_addInfoInput">추가 정보 입력</string>
    <string name="text_whatGender">▶회원님의 성별은 무엇인가요?</string>
    <string name="text_nextStep">다음 단계</string>
    <string name="text_man">man</string>
    <string name="text_woman">woman</string>
    <string name="text_whatAgeGroup">▶회원님의 연령을 선택해 주세요.</string>
    <string name="text_finish">완료</string>
    <string name="text_titleInput">제목을 입력해 주세요</string>
    <string name="text_contentInput">내용을 입력해 주세요</string>
    <string name="text_ing">진행중</string>
    
    <string name="text_voteInput">항목을 입력해 주세요</string>
    <string name="text_limitPlus">제한 +</string>
    <string name="text_limitGuide">제한 설정을 하지 않을 경우 기본 값은 모두 제한 없음으로 설정한다.</string>
    <string name="text_register">등록</string>
    <string name="text_modify">수정</string>
    <string name="text_cancel">취소</string>
    <string name="text_mailAddress">메일주소를 입력해 주세요</string>
    <string name="text_nowPw">현재 비밀번호</string>
    <string name="text_newPw">새 비밀번호</string>
    <string name="text_reNewPw">새 비밀번호 확인</string>
    <string name="text_emailEdit">이메일 변경</string>
    <string name="text_pwEdit">비밀번호 변경</string>
    <string name="text_profileImg">프로필 이미지</string>
    <string name="text_profileName">이름을 입력해 주세요</string>
    <string name="text_pushNotification">골라쥬 푸쉬 알림</string>
    <string name="text_mailNotification">골라쥬 메일 알림</string>
    <string name="text_clause">제 1 조 (목적)
본 약관은 오아시스 컨소시엄 사업자인 날리지큐브  (이하 “회사”)에서 제공하는 오아시스 웹사이트 및 오아시스 관련 인터넷 서비스(이하 “서비스”라고 하며, 접속 가능한 유/무선 단말기의 종류와는 상관없이 이용 가능한 “회사”가 제공하는 모든 “서비스”를 의미합니다.)를 이용함에 있어 회사와 회원간의 권리, 의무 및 책임사항, 관련 절차 등을 규정함을 목적으로 합니다.
제 2 조 (약관의 효력 및 개정)
① 본 약관의 내용은 서비스 화면에 게시하거나 기타의 방법으로 회원에게 공시하고, 이에 동의한 회원이 서비스에 가입함으로써 효력이 발생합니다.
② 회사는 본 약관의 내용과 회사의 상호, 영업소 소재지, 사업자 등록번호, 연락처(전화, 팩스, 전자우편주소 등)등을 회원이 알 수 있도록 서비스 초기 화면에 게시합니다.
③ 본 약관은 회사가 필요하다고 인정되는 경우 대한민국 법령의 범위 내에서 개정할 수 있으며, 회사가 약관을 개정할 경우에는 적용예정일 및 개정사유를 명시하여 현행 약관과 함께 서비스 초기화면에 그 적용예정일 7일 전부터 공지합니다.
다만, 회원에게 불리하게 약관내용을 변경하는 경우에는 최소한 30일 이상의 사전 유예기간을 두고 공지하는 것 외에 이메일 발송 등 전자적 수단을 통해 별도로 통지합니다.
④ 회원은 개정된 약관에 대해 동의하지 않을 권리가 있으며, 개정된 약관에 동의하지 않을 경우이용계약을 해지할 수 있습니다. 회원이 회사의 전항 단서에 따른 약관의 불리한 변경에 대하여 적용예정일까지 회사에게 부동의 의사를 표시하지
않거나 이용계약을 해지하지 않은 경우 변경된 약관을 승인한 것으로 봅니다. <br />
⑤ 회사는 개별 서비스에 대해서는 별도의 이용약관 및 규정, 세부 이용지침 등을 둘 수 있으며, 해당 내용이 본 약관과 상충할 경우에는 개별서비스 약관이 우선하여 적용됩니다.

제 3 조 (약관외 준칙
본 약관에 명시되지 않은 사항은 전기통신기본법, 전기통신사업법 및 전자거래기본법, 전자상거래 등에서의 소비자보호에 관한 법률 등 관계법령 또는 상관례에 따릅니다.

제 4 조 (용어의 정의)
① 본 약관에서 사용하는 용어의 정의는 다음과 같습니다.
1. “회원”이라 함은 “회사”에서 제공하는 사이트에 접속하여 홈페이지 이용약관과 개인정보취급방침에 동의하고, 아이디와 비밀번호를 발급 받은 고객으로 “회원”의 자격 및 권한은 회원유형별로 관리합니다.
2. “운영자”라 함은 “서비스”의 전반적인 관리와 원활한 운영을 위하여 “회사”가 선정한 사람을 의미합니다.
3. “아이디(ID)”라 함은 “회원” 식별과 “회원”의 서비스 이용을 위하여 “회원”이 선정하고 “회사”가 승인하는 영문자와 숫자의 조합으로, 하나의 이메일주소에 하나의 ID만 발급, 이용 가능합니다.
4. “비밀번호”라 함은 “회원”의 비밀 보호를 위해 “회원” 자신이 설정한 문자와 숫자의 조합을 의미합니다.
5. IP주소(Internet Protocol address) : 인터넷 망에서 송신원과 송신선을 식별하기 위해 배정하는 주소
6. “청구기관(Biller)”이라 함은 “회원”으로부터 대금을 납부 받는 기관으로, “회원”의 신청을 전제로 “회사”의 “서비스”를 통하여 “회원”에게 요금을 청구하고 이를 징수할 권한이 있는 자를 말합니다.
7. “불법스팸”이라 함은 서비스를 이용해 수신자가 원하지 않는데도 불구하고 일방적으로 전송 또는 게시되는 영리목적의 광고성 정보
8. “게시물”이란 회원이 올린 영상, 글, 사진, 그림, 각종 파일과 링크, 각종 답글 등의 정보의 총칭을 말합니다.
② 이 약관에서 사용하는 용어의 정의는 제1항에서 정하는 것을 제외하고는 관계 법령 및 서비스별 안내에서 정하는 바에 의합니다.</string>
    
    
	
        

</resources>
