<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" 
    tools:context=".Login" >
    
    <LinearLayout
		android:layout_width="fill_parent"
	   	android:layout_height="30dp"
	   	android:background="#2FC121"
	   	android:paddingTop="2dp"
	   	android:paddingBottom="2dp" 
	   	android:gravity="center" >
    
	   	<TextView
	     	android:layout_width="wrap_content"
	     	android:layout_height="wrap_content"
	     	android:text="@string/text_login"
	     	android:textColor="#FFFFFF"
	     	android:textSize="20sp"
	     	android:textStyle="bold"
	     	android:onClick="" />
	</LinearLayout>
    
    <LinearLayout
		android:layout_width="fill_parent"
	   	android:layout_height="wrap_content"
	   	android:orientation="vertical"
	   	android:gravity="center"
	   	android:layout_marginTop="20dp"
	   	android:padding="5dp" >
    
	   	<TextView
	     	android:layout_width="wrap_content"
	     	android:layout_height="wrap_content"
	     	android:text="@string/text_guide"
	     	android:textColor="#AAAA11"
	     	android:layout_marginBottom="40dp"
	    />
	   	
	   	<EditText 
	   	    android:id="@+id/loginIdEdit"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:hint="@string/text_id"
	        android:inputType="textVisiblePassword|textUri"
	        android:background="@drawable/edittext_style"
        />
	   	
	   	<EditText
	   	    android:id="@+id/loginPwEdit" 
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:hint="@string/text_pw"
	        android:inputType="textPassword"
	        android:background="@drawable/edittext_style"
        />
	   	
	   	<LinearLayout
	   	    android:layout_gravity="left" 
	   	    android:layout_width="wrap_content"
	   	    android:layout_height="wrap_content"
	   	    android:orientation="horizontal"
	   	    android:layout_marginTop="5dp"
	   	>
	   	     <CheckBox
	  	    	android:id="@+id/autoLogin" 
	     		android:layout_width="wrap_content"
	     		android:layout_height="wrap_content"
	     		android:button="@drawable/checkbox_style"
		     />
		  	 <TextView
		  	    android:id="@+id/autoLoginText"
		  	    android:layout_width="wrap_content"
		     	android:layout_height="wrap_content" 
		  	    android:text="@string/text_autoLogin"	
				android:textSize="14sp"
				android:layout_marginLeft="5dp"
		  	 />
	   	</LinearLayout>
	   	
   		<Button
   		    android:id="@+id/btn_login"
	     	android:layout_width="fill_parent"
	     	android:layout_height="wrap_content"
	     	android:text="@string/text_login"
	     	android:textColor="#FFFFFF"
	     	android:layout_marginTop="35dp"
	     	android:layout_marginBottom="5dp"
	     />
   		
   		<TextView
   		    android:id="@+id/btn_join"
   		    android:layout_gravity="right"
   			android:layout_width="wrap_content"
	     	android:layout_height="wrap_content"
	     	android:text="@string/text_join"
	     	android:layout_marginRight="5dp"
	     	android:layout_marginTop="5dp"
	     	android:textColor="#000000"
	     	android:layout_marginBottom="40dp"
	     	android:textStyle="bold"
	     	android:textSize="15sp"
	      />
   		   
	</LinearLayout>
</LinearLayout>


