<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >
    
    <include layout="@layout/header" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:background="#FF9900"
                    android:orientation="vertical" >

                    <TextView
		            android:id="@+id/profile_img_text"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/text_profileImg"/>
                    
                    <ImageView
                        android:id="@+id/profile_img_view"
                        android:layout_width="92dp"
                        android:layout_height="95dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="7"
                    android:background="#00FF00"
                    android:orientation="vertical" >

                    <TextView
		            android:id="@+id/empty_text"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text=" "/>
                    
                    <EditText
                        android:id="@+id/option_name_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:hint="@string/text_profileName"
                        android:background="@drawable/edittext_style"
                        android:singleLine="true" />
                    
                   	<TextView
			            android:id="@+id/option_id_text"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:text="Large Text"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout5"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
			            android:id="@+id/email_text"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:text="@string/text_emailEdit"/>

                    <EditText
			            android:id="@+id/email_edit_text"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:hint="@string/text_mailAddress"
			            android:ems="10"
			            android:background="@drawable/edittext_style"
			            android:inputType="textEmailAddress" />
                </LinearLayout>
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/linearLayout6"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:orientation="vertical" >

                    <TextView
			            android:id="@+id/pw_text"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:text="@string/text_pwEdit" />
                    
                    <EditText
                        android:id="@+id/nowPw_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_nowPw"
                        android:singleLine="true"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_style"
                        android:inputType="textPassword" />
                    
                    <EditText
                        android:id="@+id/newPw_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_newPw"
                        android:singleLine="true" 
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_style"
                        android:inputType="textPassword" />
                    
                    <EditText
                        android:id="@+id/reNewPw_edit"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/text_reNewPw"
                        android:singleLine="true" 
                        android:layout_marginTop="5dp"
                        android:background="@drawable/edittext_style"
                        android:inputType="textPassword" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/menu" />

        <Button
            android:id="@+id/option_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="변경사항 적용" />

            <requestFocus />
        
    </RelativeLayout>

</LinearLayout>
