<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >
    
    <include layout="@layout/header" />
    
    <RelativeLayout 
		android:layout_width="fill_parent"
	   	android:layout_height="fill_parent"
	>
		<ScrollView 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
		>
	

	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:padding="5dp" >
	            
	            <LinearLayout 
	            	android:layout_width="fill_parent"
	            	android:layout_height="wrap_content"
	            	android:orientation="vertical"
	            >
			        <EditText 
			            android:id="@+id/edt_title"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:hint="@string/text_titleInput"
			            android:singleLine="true"
			            android:background="@drawable/edittext_style"
			        />
			        
			        <EditText
			            android:id="@+id/edt_content"
			            android:layout_marginTop="5dp" 
			            android:ems="10"
			            android:lines="5"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:hint="@string/text_contentInput"
			            android:gravity="top|left"
						android:scrollHorizontally="false"
						android:minWidth="10.0dp"
						android:minHeight="5.0dp"
						android:inputType="textMultiLine"
						android:background="@drawable/edittext_style"
			        />
			    </LinearLayout>
			    
	            
	            
	            
		            
	            <LinearLayout 
	        		android:orientation="vertical"
	        		android:layout_width="fill_parent"
	        		android:layout_height="wrap_content"
	        		android:layout_marginTop="10dp"
	        	>
		       	 	<LinearLayout 
	        			android:orientation="horizontal"
	        			android:layout_width="fill_parent"
	        			android:layout_height="wrap_content"
	        			android:gravity="center"
	        		>
		       	 		<Button 
		       	 		    android:id="@+id/btn_modify"
				            android:layout_width="wrap_content"
			            	android:layout_height="wrap_content"
			            	android:text="@string/text_modify"
			            	android:layout_marginRight="5dp"
				    	/>
			       	 	
			       	 	<Button 
			       	 	    android:id="@+id/btn_modifyCancel"
				            android:layout_width="wrap_content"
			            	android:layout_height="wrap_content"
			            	android:text="@string/text_cancel"
							android:layout_marginLeft="5dp"
				    	/>
		       	 	    
		       	 	    
		       	 	</LinearLayout>
		       	 	
		       	 	
		        </LinearLayout>
		        
	            
	            
	            
		       	 	
		       	 	
		        
	         
	        </LinearLayout>
	       
	    </ScrollView>
        
        

        
        	    
	    <include layout="@layout/menu" />
	    
	    
	    
	</RelativeLayout>
</LinearLayout>