<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >
    
    <include layout="@layout/header" />
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical" >

            <EditText 
			    android:id="@+id/email_title"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:hint="@string/text_titleInput"
			    android:background="@drawable/edittext_style"
				android:singleLine="true">
				<requestFocus />
            </EditText>
            
            <EditText
                android:id="@+id/email_content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|left"
                android:hint="@string/text_contentInput"
                android:inputType="textMultiLine"
                android:lines="5"
                android:minHeight="5.0dp"
                android:minWidth="10.0dp"
                android:layout_marginTop="5dp"
                android:scrollHorizontally="false"
                android:background="@drawable/edittext_style"
            />
            
            <EditText 
			    android:id="@+id/email_address"
			    android:layout_width="fill_parent"
			    android:layout_height="fill_parent"
			    android:hint="@string/text_mailAddress"
				android:singleLine="true"
				android:layout_marginTop="5dp"
				android:background="@drawable/edittext_style"
			/>

        </LinearLayout>

        <Button
            android:id="@+id/serviceSendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:text="전송" />

        <include layout="@layout/menu" />
    </RelativeLayout>

</LinearLayout>
