<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f5f5f5"
    android:orientation="vertical" >
    
    <include layout="@layout/header" />
    
   
    <RelativeLayout 
		android:layout_width="fill_parent"
	   	android:layout_height="fill_parent"
	>
	
        <LinearLayout
	    	android:layout_width="fill_parent"
    		android:layout_height="wrap_content"
    		android:background="#696969"
    		android:padding="3dp"
    		android:orientation="vertical" >
    
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/text_write" 
	        	android:textColor="#FFFFFF"
	        	android:layout_marginLeft="5dp"
	        	android:textStyle="bold"
	        />
    	</LinearLayout>
    
        
        
		<ScrollView 
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_marginTop="35dp"
		>
	        <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:padding="5dp" >
	            
	            <LinearLayout 
	            	android:layout_width="fill_parent"
	            	android:layout_height="wrap_content"
	            	android:orientation="vertical"
	            >
			        <EditText 
			            android:id="@+id/edt_title"
			            android:layout_width="fill_parent"
			            android:layout_height="fill_parent"
			            android:hint="@string/text_titleInput"
			            android:singleLine="true"
			            
			            
			            
			            android:background="@drawable/edittext_style"
			        />
			        
			        <EditText
			            android:layout_marginTop="10dp"
			            android:id="@+id/edt_content" 
			            android:ems="10"
			            android:lines="5"
			            android:layout_width="fill_parent"
			            android:layout_height="wrap_content"
			            android:hint="@string/text_contentInput"
			            android:gravity="top|left"
						android:scrollHorizontally="false"
						android:minWidth="10.0dp"
						android:minHeight="5.0dp"
						android:inputType="textMultiLine"
						
						
						
						android:background="@drawable/edittext_style"
			        />
			    </LinearLayout>
			    
	            
	            
	            
	            <LinearLayout 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	            	android:orientation="vertical"
	            	android:layout_marginTop="10dp"
	            >
			        
	                <LinearLayout
	                    android:id="@+id/vote_listArea" 
	             	   	android:layout_width="fill_parent"
	                	android:layout_height="wrap_content"
	            		android:orientation="vertical"
	            	>
		                <LinearLayout
	                 	   	android:id="@+id/voteArea1" 
	             	   		android:layout_width="fill_parent"
	                		android:layout_height="wrap_content"
	            			android:orientation="horizontal"
	            			android:gravity="center"
	            		>
				       	 	<RelativeLayout 
				        		android:layout_width="fill_parent"
				        		android:layout_height="wrap_content"
				        		android:layout_weight="1"
				        	>
				        		<EditText
					            	android:id="@+id/edt_voteList1" 
					            	android:layout_width="fill_parent"
					            	android:layout_height="wrap_content"
					            	android:hint="@string/text_voteInput"
					            	android:singleLine="true"
					            	
					            	
					            	android:background="@drawable/edittext_style"
					        	/>
				        	</RelativeLayout>
					        	
				       	 	<ImageView 
				       	 	    android:id="@+id/bnt_votePic1"
					        	android:src="@android:drawable/ic_menu_camera"
					        	android:layout_width="50dp"
					        	android:layout_height="50dp"
					        	android:layout_weight="0" 
					        	android:contentDescription=""
					        />   
			        	</LinearLayout>
			        
		                
		                
		                
		                <LinearLayout
	                 	   	android:id="@+id/voteArea2" 
	             	   		android:layout_width="fill_parent"
	                		android:layout_height="wrap_content"
	            			android:orientation="horizontal"
	            			android:gravity="center"
	            		>
				       	 	<RelativeLayout 
				        		android:layout_width="fill_parent"
				        		android:layout_height="wrap_content"
				        		android:layout_weight="1"
				        	>
				        		<EditText
					            	android:id="@+id/edt_voteList2" 
					            	android:layout_width="fill_parent"
					            	android:layout_height="wrap_content"
					            	android:hint="@string/text_voteInput"
					            	android:singleLine="true"
					            	
					            	android:background="@drawable/edittext_style"
					        	/>
				        	</RelativeLayout>
					        	
				       	 	<ImageView 
				       	 	    android:id="@+id/bnt_votePic2"
					        	android:src="@android:drawable/ic_menu_camera"
					        	android:layout_width="50dp"
					        	android:layout_height="50dp"
					        	android:layout_weight="0" 
					        	android:contentDescription=""
					        />   
			           
			        	</LinearLayout>
			        	
			       	 	
			       	 	
			       	 	
			       	 	
			       	 	
			       	 	
			       	 	
			       	 	
			       	 	
			        
			       	</LinearLayout>
		        	
		       	 	<ImageButton 
		       	 	    android:id="@+id/btn_votePlus"
			            android:layout_width="wrap_content"
		            	android:layout_height="wrap_content"
		            	android:layout_gravity="center_horizontal"
		            	android:src="@android:drawable/ic_menu_edit"
		            	android:background="@android:color/transparent"
		            	android:contentDescription=""
			    	/>
		       	 	
	            </LinearLayout>
	            
	            
	            
	            <LinearLayout 
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	            	android:orientation="horizontal"
	            	android:gravity="center_vertical"
	            >
	            
		            <Button 
		       	 	    android:id="@+id/btn_limitOption"
			            android:layout_width="wrap_content"
		            	android:layout_height="wrap_content"
		            	android:layout_marginTop="5dp"
		            	android:text="@string/text_limitPlus"
			    	/>
		            
		            
		            <HorizontalScrollView
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:scrollbars="none" 
		            >
			            <LinearLayout 
							android:id="@+id/limitOptionList"	                
			        		android:orientation="horizontal"
			        		android:layout_width="wrap_content"
			        		android:layout_height="wrap_content"
			        		android:layout_marginTop="10dp"
			        		android:padding="5dp"
			        	>
			       	 	
		                
		               
			       		</LinearLayout>
			       	 
			       	 
		            </HorizontalScrollView>
	            
		        </LinearLayout>
		            
	            <LinearLayout 
	        		android:orientation="vertical"
	        		android:layout_width="fill_parent"
	        		android:layout_height="wrap_content"
	        		android:layout_marginTop="10dp"
	        	>
		       	 	<TextView 
		       	 	    android:layout_width="wrap_content"
		       	 	    android:layout_height="wrap_content"
		       	 		android:text="@string/text_limitGuide"    
		       	 	/>
		       	 	
		       	 	<LinearLayout 
	        			android:orientation="horizontal"
	        			android:layout_width="fill_parent"
	        			android:layout_height="wrap_content"
	        			android:gravity="center"
	        		>
		       	 		<Button 
		       	 		    android:id="@+id/btn_register"
				            android:layout_width="wrap_content"
			            	android:layout_height="wrap_content"
			            	android:text="@string/text_register"
			            	android:layout_marginRight="5dp"
				    	/>
			       	 	
			       	 	<Button 
			       	 	    android:id="@+id/btn_writeCancel"
				            android:layout_width="wrap_content"
			            	android:layout_height="wrap_content"
			            	android:text="@string/text_cancel"
							android:layout_marginLeft="5dp"
				    	/>
		       	 	    
		       	 	    
		       	 	</LinearLayout>
		       	 	
		       	 	
		        </LinearLayout>
		        
	            
	            
	            
		       	 	
		       	 	
		        
	         
	        </LinearLayout>
	       
	    </ScrollView>
        
        

        
        	    
	    <include layout="@layout/menu" />
	    
	    
	    
	</RelativeLayout>
</LinearLayout>